--- a/src/authComponents/Login/Login.css
+++ b/src/authComponents/Login/Login.css
@@ -8,7 +8,7 @@
     width: 100%;
     max-width: 430px;
     margin: auto;
-    padding: 40px 63px;
+    padding: 40px;
 }
 
 .topHeading h1 {
@@ -25,22 +25,21 @@
     display: flex;
     align-items: center;
     margin-bottom: 10px;
-    padding: 9px 20px;
+    padding: 5px 20px;
     cursor: pointer;
 }
 
 .loginComponents h3 {
     font-weight: 400;
     font-size: 16px;
-    line-height: 24px;
     color: #000000;
     margin-bottom: 0px;
 }
 
 .loginComponents img {
-    width: 50px;
-    height: 50px;
-    margin-right: 20px;
+    width: 60px;
+    height: 60px;
+    margin-right: 25px;
 }
 
 .accountType {
