--- a/src/appComponents/Search/SearchBar.css
+++ b/src/appComponents/Search/SearchBar.css
@@ -6,6 +6,10 @@
 .searchBar .form-control {
     border: none !important;
     box-shadow: none !important;
+    font-size: 14px;
+    font-weight: 400;
+    background: #FAFAFA;
+    border-radius: 4px;
 }
 
 .searchBar .form-control:focus {
