--- a/src/assets/styles/Common.css
+++ b/src/assets/styles/Common.css
@@ -16,3 +16,30 @@
     font-size: 15px;
     font-weight: 400;
 }
+
+.nav-pills .nav-link.active,
+.nav-pills .show>.nav-link {
+    background: #EC4624 !important;
+    box-shadow: 0px 25px 40px rgba(0, 0, 0, 0.03);
+    border-radius: 6px;
+    margin-top: 10px;
+}
+
+.nav-pills .nav-link,
+.nav-pills .show>.nav-link {
+    background: #DFDFDF !important;
+    box-shadow: 0px 25px 40px rgb(0 0 0 / 3%);
+    border-radius: 6px;
+    font-weight: 500;
+    font-size: 16px;
+    color: #000000;
+    margin-top: 10px;
+    position: relative;
+}
+
+.addTabs svg {
+    font-weight: 700;
+    font-size: 25px;
+    position: absolute;
+    right: 5px;
+}
