--- a/src/appComponents/Header/Header.css
+++ b/src/appComponents/Header/Header.css
@@ -1,7 +1,7 @@
 .headerSection {
     padding-bottom: 40px;
     border-bottom: 1px solid #B7B7B7;
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
 }
 
 .logoImg {
