--- a/src/authComponents/Login/LoginForm/LoginForm.css
+++ b/src/authComponents/Login/LoginForm/LoginForm.css
@@ -1,3 +1,21 @@
+.signupForm .form-control {
+    background-color: #f6f6f6;
+    border: none;
+    height: 40px;
+}
+
+.signupForm .form-control:focus {
+    background-color: #f5f5f5;
+    outline: none !important;
+    border: none !important;
+    box-shadow: none;
+}
+
+.signupForm .form-control::placeholder {
+    color: #656565;
+    font-size: 15px;
+    font-weight: 400;
+}
 /* .signupForm .btn {
     background-color: #ec4624;
     border: none;
