--- a/src/authComponents/Login/Login.css
+++ b/src/authComponents/Login/Login.css
@@ -65,7 +65,10 @@
 /* social signup facebook css */
 
 .loginComponents button.my-facebook-button-class.metro {
-    border: none;
-    font-size: 18px;
+    border: none !important;
     background-color: #F6F6F6;
+    font-weight: 400;
+    font-size: 16px;
+    color: #000000;
+    margin-bottom: 0px;
 }
