--- a/src/appComponents/Profile/Profile.css
+++ b/src/appComponents/Profile/Profile.css
@@ -224,8 +224,28 @@
 .phoneInputSet svg {
     position: absolute;
     bottom: 10px;
-    left: 10px;
+    left: 4px;
     font-size: 20px;
+    z-index: 999;
+    color: #FFFFFF;
+}
+
+.phoneInputSet p {
+    position: absolute;
+    bottom: -5px;
+    left: 29px;
+    font-size: 12px;
+    z-index: 999;
+    color: #FFFFFF;
+}
+
+.phoneInputSet .downArrow {
+    position: absolute;
+    bottom: 6px;
+    left: 82px;
+    font-size: 28px;
+    z-index: 999;
+    color: #FFFFFF;
 }
 
 .phoneInputSet .form-control {
@@ -243,14 +263,67 @@
     height: 40px !important;
     width: 100% !important;
     outline: none;
+    /* padding-left: 48px !important; */
+    padding-left: 120px !important;
 }
 
-.react-tel-input .flag-dropdown {
-    background-color: #FFFFFF !important;
+.phoneInputSet .react-tel-input .flag-dropdown {
     border: none !important;
     border-radius: 3px 0 0 3px;
+    background: #000000 !important;
+    width: 110px !important;
+    border-top-left-radius: 10px !important;
+    border-bottom-left-radius: 10px !important;
 }
 
-.react-tel-input .selected-flag .flag {
+.phoneInputSet .react-tel-input .selected-flag .flag {
     display: none !important;
+    z-index: 0;
 }
+
+
+.phoneInputSet .react-tel-input .selected-flag:hover,
+.phoneInputSet .react-tel-input .selected-flag:focus {
+    background: #000000 !important;
+}
+
+.phoneInputSet .react-tel-input .selected-flag {
+    outline: none;
+    position: relative;
+    width: 110px !important;
+    height: 100%;
+    padding: 0 0 0 8px;
+    border-radius: 3px 0 0 3px;
+    background: #000000 !important;
+}
+
+.phoneInputSet .react-tel-input .selected-flag {
+    border-top-left-radius: 10px !important;
+    border-bottom-left-radius: 10px !important;
+}
+
+.phoneInputSet:before {
+    content: "";
+    border-top: 6px solid;
+    border-right: 6px solid transparent;
+    border-bottom: 0;
+    border-left: 6px solid transparent;
+    position: absolute;
+    left: 89px;
+    top: 18px;
+    z-index: 999;
+    color: #FFFFFF !important;
+}
+
+/* .flag-dropdown:before{
+    content: "";
+    border-top: 6px solid;
+    border-right: 6px solid transparent;
+    border-bottom: 0;
+    border-left: 6px solid transparent;
+    position: absolute;
+    left: 89px;
+    top: 18px;
+    z-index: 999;
+    color: #FFFFFF !important;
+} */
