added drop arrow icon and working on company profile design
stored deal list in redux and calling api in redux from the deal header

--- a/src/appComponents/DealSubModule/DealSubModules.css
+++ b/src/appComponents/DealSubModule/DealSubModules.css
@@ -87,6 +87,11 @@
     text-decoration: none;
 }
 
+.btn-link:focus {
+    color: #000000;
+    text-decoration: none;
+}
+
 .mapAccordion h2 button {
     font-weight: 600;
     font-size: 20px;
@@ -94,6 +99,9 @@
     color: #000000;
     border: none;
     text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .mapAccordion .card-body {
