--- a/src/appComponents/LatestDeals/LatestDeals.css
+++ b/src/appComponents/LatestDeals/LatestDeals.css
@@ -122,6 +122,12 @@ button.whatsApp svg {
     font-size: 16px;
 }
 
+.stickyClass {
+    position: sticky;
+    top: 0px;
+    bottom: 0px;
+}
+
 @media screen and (max-width: 400px) {
     .latestDeals {
         padding: 15px;
