--- a/src/appComponents/Header/Header.css
+++ b/src/appComponents/Header/Header.css
@@ -28,10 +28,10 @@
 
 .navItem .navbar-nav .nav-link {
     background: #FFFFFF !important;
-    margin-right: 12px;
+    /* margin-right: 12px; */
     margin-top: 15px;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 15px;
     letter-spacing: -0.2px;
     color: #000000;
     padding-right: 29px !important;
@@ -45,6 +45,10 @@
     opacity: unset !important;
 }
 
+.ulValue {
+    gap: 15px;
+}
+
 @media only screen and (max-width: 991px) {
     .navItem {
         display: block;
@@ -54,10 +58,10 @@
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
     .navItem .navbar-nav .nav-link {
         background: #FFFFFF !important;
-        margin-right: 12px;
+        /* margin-right: 12px; */
         margin-top: 15px;
         font-weight: 400;
-        font-size: 16px;
+        font-size: 15px;
         letter-spacing: -0.2px;
         color: #000000;
         padding-right: 12px !important;
