--- a/src/authComponents/Login/Login.css
+++ b/src/authComponents/Login/Login.css
@@ -73,3 +73,13 @@
     margin-bottom: 0px;
     cursor: pointer;
 }
+
+.loginformcomponent button.my-facebook-button-class.metro {
+    border: none !important;
+    
+    font-weight: 400;
+    font-size: 16px;
+    color: #000000;
+    margin-bottom: 0px;
+    cursor: pointer;
+}
