--- a/src/appComponents/Profile/Profile.css
+++ b/src/appComponents/Profile/Profile.css
@@ -202,6 +202,10 @@
     color: #FFFFFF !important;
 }
 
+.buttonAdd:active {
+    background: #000000 !important;
+}
+
 /* delete account css */
 .deleteIcon {
     display: flex;
