classified meta list implementation

--- a/src/appComponents/ClassiFieds/ClassiFieds.css
+++ b/src/appComponents/ClassiFieds/ClassiFieds.css
@@ -275,6 +275,14 @@
     font-weight: 600;
     
 }
+.classiFieds_forSaledropdown{
+    margin-bottom: 15px;
+}
+@media only screen and (max-width: 991px) {
+    .advertisment{
+        margin-top: 10px;
+    }
+}
 @media only screen and (max-width: 480px) {
     .classiFieds_forSale_about .classiFieds_forSale img {
         width: 116.83px;
@@ -433,6 +441,7 @@
        height: 2.68px;
        margin: 3px;
     }
+    
 }
 
 @media only screen and (max-width: 349px) {
@@ -447,5 +456,27 @@
         width: 300px;
         height: 277px;
     }
+}
+.advertisment{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.classiFieds_map_serchbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.classiFieds_country_select{
+    border: 1px solid red;
+    max-height: 200px;
+    overflow-y: scroll;
+    z-index: 99999999999 !important;
+    position: absolute;
+    background:#ec4624 ;
+}
+.classiFieds_country_select >div{
+    border: 1px solid #ec4624;
+    color: white;
 }
 
