--- a/src/appComponents/ClassiFieds/ClassiFieds.css
+++ b/src/appComponents/ClassiFieds/ClassiFieds.css
@@ -157,14 +157,13 @@
     margin-bottom: 0px;
 }
 
-.classiFieds_RupeesText p small {
-    font-weight: 400;
-    font-size: 11px;
-    line-height: 16px;
-    letter-spacing: -0.0916667px;
-    color: #000000;
+.classiFieds_RupeesText span {
+        color: #000000;
+        font-size: 12px;
+        font-weight: 400;
+        margin: 5px;
+    }
 
-}
 
 .classiFieds_countryName span {
     font-weight: 600;
