--- a/src/authComponents/SignupForm/SignupForm.css
+++ b/src/authComponents/SignupForm/SignupForm.css
@@ -1,3 +1,12 @@
+.signupForm .form-control::placeholder {
+  color: #656565;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+ 
+ 
+ 
  .notification svg {
   font-size: 41px;
     color: #ec4624;
