working on classified web list Api integration

--- a/src/appComponents/ClassiFieds/ClassiFieds.css
+++ b/src/appComponents/ClassiFieds/ClassiFieds.css
@@ -479,3 +479,18 @@
     color: white;
 }
 
+
+.categoryButton .nav-item {
+    position: relative;
+}
+
+.categoryButton svg {
+    position: absolute;
+    top: 15px;
+    right: 10px;
+    color: #fff;
+    font-size: 25px;
+    font-weight: 600;
+}
+
+
