working on modify design according to figma

--- a/src/appComponents/ClassiFieds/ClassifiedCountry.css
+++ b/src/appComponents/ClassiFieds/ClassifiedCountry.css
@@ -7,3 +7,25 @@
     font-weight: 500 !important;
     font-size: 14px !important;
 }
+
+span.countryText {
+    margin: 8px;
+    font-size: 15px;
+    font-weight: 400;
+    color: #4B4B4B;
+    font-family: 'Nunito';
+}
+
+span.resultText {
+    color: #EC4624;
+    font-size: 15px;
+    font-weight: 400;
+    font-family: 'Nunito';
+    margin: 5px;
+    font-family: 'Nunito' sans-serif !important;
+}
+
+.countryIcon{
+    padding: 5px;
+    margin-top: 5px;
+}
