--- a/src/appComponents/Header/HeaderFeatures/HeaderFeatures.css
+++ b/src/appComponents/Header/HeaderFeatures/HeaderFeatures.css
@@ -7,11 +7,12 @@
     padding-left: 25px !important;
     justify-content: right;
     width: 100%;
-    max-width:fit-content;
-    height: 39px !important;}
+    max-width: fit-content;
+    height: 39px !important;
+}
 
 .headerFeature h5 {
-    font-weight: 400;
+    font-weight: 500;
     font-size: 15px;
     padding-top: 12px;
     color: #474747;
@@ -26,3 +27,4 @@
     padding-right: 10px;
     padding-left: 10px;
 }
+
