--- a/src/authComponents/EmailVarification/EmailVarify.css
+++ b/src/authComponents/EmailVarification/EmailVarify.css
@@ -7,7 +7,7 @@
 }
 
 .forgotPassword h1 {
-  font-size: 22px;
+  font-size: 20px;
   color: #000000;
   text-align: center;
   font-weight: 500;
@@ -19,6 +19,7 @@
   font-size: 14px;
   text-align: center;
   color: #656565;
+  padding: 0px 33px;
 }
 
 .passwordSent p {
