--- a/src/utils/AlertBox/ErrorResponse.css
+++ b/src/utils/AlertBox/ErrorResponse.css
@@ -16,7 +16,7 @@
     line-height: 20px;
     text-align: center;
     color: #EC4624;
-    margin-left: 25px;
+     margin-left: 25px; 
 }
 
 .alertBox p {
@@ -25,7 +25,9 @@
     line-height: 22px !important;
     text-align: center !important;
     color: #000000 !important;
-    margin-left: 30px !important;
+    margin-left: 30px !important; 
+    margin-bottom: 0px;
+
 
 }
 
@@ -41,5 +43,11 @@
   opacity: unset;
   cursor: pointer;
 
+  
+}
+
+.alertBox .alert {
+  
+  --bs-alert-margin-bottom: 0px !important;
   
 }
