create youradd component

--- a/src/appComponents/ClassiFieds/ClassiFieds.css
+++ b/src/appComponents/ClassiFieds/ClassiFieds.css
@@ -1,5 +1,4 @@
 .classiFieds_forSaleBox {
-    padding: 15px;
     background-color: #FFFFFF;
     box-shadow: 0px 25px 40px rgba(0, 0, 0, 0.03);
     margin-bottom: 25px;
@@ -7,10 +6,19 @@
 
 .classiFieds_forSaleBox .classiFieds_forSale_about {
     display: flex;
-    /* justify-content: space-between; */
+    justify-content: space-between;
     align-items: flex-start;
     margin-bottom: 6px;
 } 
+
+.classiFieds_forSaleBox .classiFieds_forSale_about>div:first-child{
+    justify-content: flex-start;
+}
+.classiFieds_forSaleBox .classiFieds_forSale_about>div:nth-child(2){
+    margin-left: 5px;
+    width: 100%;
+}
+
 .classiFields_mobileMargingRemove {
     margin-bottom: 0px !important;
 }
@@ -49,8 +57,10 @@
 
 .classiFieds_forSale_about .classiFieds_time_action {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+}
+.classiFieds_forSale_about .classiFieds_time_action>div:nth-child(2) {
+   padding-left: 15px;
 }
 
 .classiFieds_forSale_about .classiFieds_time_action .classiFieds_forSale_button {
@@ -65,7 +75,7 @@
     font-size: 13px;
 }
 
-.classiFieds_forSaleBox .classiFields_contactPerson {
+ .classiFields_contactPerson {
     background: #E8E8E8;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.0311407);
     border-radius: 6px;
@@ -144,7 +154,6 @@
 }
 
 .classiFieds_time span {
-    padding-left: 10px;
     font-weight: 400;
     font-size: 12px;
     line-height: 18px;
@@ -315,6 +324,7 @@
     }
 }
 @media only screen and (max-width: 480px) {
+    
     .classiFieds_forSale_about .classiFieds_forSale img {
         width: 116.83px;
         height: 87.62px;
@@ -339,8 +349,9 @@
         font-weight: 600;
         font-size: 8.4378px;
         line-height: 13px;
-        height: 18px;
+        min-height: 18px;
         width: 56px;
+        height: 100%;
     }
 
     .classiFieds_time span {
@@ -527,30 +538,5 @@
     font-size: 25px;
     font-weight: 600;
 }
-
-.classiFields_iconBackGround svg {
-    font-size: 22px;
-    margin-left: 11px;
-    margin-top: 10px;
-}
-
-.nodataDisplay {
-    margin-top: 16px;
-    display: flex;
-    padding: 9px 148px;
-    width: 100%;
-    font-size: 20px;
-    font-weight: 400;
-    color: #000000;
-}
-
-.jobType p {
-    margin-top: 10px;
-    color: #E91F63;
-    font-size: 20px;
-    font-weight: 500;
-}
-
-
 
 
