--- a/src/appComponents/LatestDeals/LatestDeals.css
+++ b/src/appComponents/LatestDeals/LatestDeals.css
@@ -6,7 +6,8 @@
     padding: 30px;
     margin-bottom: 30px;
 }
-.latestDeals img{
+
+.latestDeals img {
     width: 100%;
     /* max-width: 485px; */
 }
@@ -41,7 +42,7 @@
     margin-bottom: 14px !important;
 }
 
-.latestDeals button{
+.latestDeals button {
     display: block;
     width: 100%;
     height: 46px;
@@ -76,7 +77,7 @@
     margin-bottom: 10px;
 }
 
-.dealPrice h4{
+.dealPrice h4 {
     font-weight: 400;
     font-size: 33.6px;
     line-height: 50px;
@@ -84,7 +85,7 @@
     margin-right: 5px;
 }
 
-.dealPrice span{
+.dealPrice span {
     font-weight: 300;
     font-size: 12px;
     color: #000000;
@@ -132,4 +133,12 @@ button.whatsApp svg {
     .latestDeals {
         padding: 15px;
     }
+}
+
+.companyDetails .companyLogo img {
+    width: 100%;
+    background: #FFFFFF;
+    box-shadow: 4px 4px 10px rgb(0 0 0 / 20%);
+    border-radius: 7.8px;
+    margin-bottom: 15px;
 }
