--- a/src/appComponents/Profile/Profile.css
+++ b/src/appComponents/Profile/Profile.css
@@ -2,9 +2,10 @@
     color: #D62D2D;
     font-size: 14px;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     margin-top: -11px;
     margin-bottom: 10px;
+    margin-left: 8px;
 }
 
 .profileLeftPart h3 {
