working on manage classified weblist data with redux

--- a/src/appComponents/ClassiFieds/ClassiFieds.css
+++ b/src/appComponents/ClassiFieds/ClassiFieds.css
@@ -7,7 +7,7 @@
 
 .classiFieds_forSaleBox .classiFieds_forSale_about {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: flex-start;
 }
 .classiFields_mobileMargingRemove {
@@ -28,6 +28,8 @@
     width: 180px;
     height: 135px;
     font-weight: 600;
+    border-radius: 5px;
+    box-shadow: 4px 4px 10px rgb(0 0 0 / 25%);
 }
 
 .classiFieds_forSale_about .classiFields_heading .text {
@@ -49,7 +51,7 @@
 }
 
 .classiFieds_forSale_about .classiFieds_time_action .classiFieds_forSale_button {
-    background: linear-gradient(95.02deg, #F13A43 0%, #EC275C 95.1%);
+    /* background: linear-gradient(95.02deg, #F13A43 0%, #EC275C 95.1%); */
     border-radius: 14px;
     line-height: 20px;
     border: none !important;
@@ -157,6 +159,7 @@
     letter-spacing: -0.2px;
     color: #E91F63;
     margin-bottom: 0px;
+    margin-top: 10px;
 }
 
 .classiFieds_RupeesText span {
@@ -173,11 +176,21 @@
     line-height: 36px;
     letter-spacing: -0.48px;
     color: #E91F63;
+    /* position: relative;
+    left: 14px;
+    right: 0px;
+    top: 0px; */
 }
 
 .classiFieds_countryName img {
     width: 14px;
     height: 17.62px;
+    /* height: 20.4px;
+    width: 16.8px;
+    position: absolute;
+    color: #000000;
+    right: 38px;
+    top: -2px; */
 }
 
 .classiFieds_aboutText p {
@@ -325,6 +338,10 @@
     .classiFieds_bookmarkicon img {
         width: 11.2px;
         height: 16px;
+    }
+
+    .classiFieds_RupeesText {
+        margin-top: 6px;
     }
 
     .classiFieds_RupeesText p {
@@ -499,5 +516,7 @@
     font-size: 22px;
     margin-left: 4px;
 }
+
+
 
 
