--- a/src/utils/Loader/Loader.module.css
+++ b/src/utils/Loader/Loader.module.css
@@ -1,9 +1,11 @@
 .loader {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
+    bottom: 0;
+    right: 0;
     background: #00000052;
     z-index: 99;
 }
