--- a/src/appComponents/ClassiFieds/ClassifiedCountry.css
+++ b/src/appComponents/ClassiFieds/ClassifiedCountry.css
@@ -29,3 +29,19 @@ span.resultText {
     padding: 5px;
     margin-top: 5px;
 }
+
+
+
+/* new list css  */
+.classifiedList {
+    background-color: #ffffff;
+}
+
+.classiFiedsImage img {
+    width: 100%;
+    max-width: 200px;
+}
+
+.topSection {
+    padding: 18px;
+}
